<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.alejo_zr.datosusuario.Confirmacion">

    <TextView
        android:id="@+id/tvdetalle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/detalle"
        android:textSize="4mm"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombreContacto"
        android:textStyle="bold"
        android:textSize="@dimen/titulo"
        android:layout_marginTop="@dimen/espacioy"
        app:layout_constraintTop_toBottomOf="@+id/tvdetalle"
         />

    <TextView
        android:id="@+id/tvNombreU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="NOMBRE"
        android:textSize="@dimen/subtitulo"
        android:textStyle="italic"
        app:layout_constraintLeft_toRightOf="@id/tvNombre"
        app:layout_constraintBottom_toBottomOf="@id/tvNombre"
        android:layout_marginLeft="@dimen/espaciox"
         />
    <TextView
        android:id="@+id/tvCumple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cumpleaños"
        android:textStyle="bold"
        android:textSize="@dimen/titulo"
        app:layout_constraintTop_toBottomOf="@id/tvNombreU"
        android:layout_marginTop="@dimen/espacioy"
        />

    <TextView
        android:id="@+id/tvcumpleU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/cumpleaños"
        android:textSize="@dimen/subtitulo"
        android:textStyle="italic"
        app:layout_constraintLeft_toRightOf="@id/tvCumple"
        app:layout_constraintBottom_toBottomOf="@id/tvCumple"
        android:layout_marginLeft="@dimen/espaciox"
        />
    <TextView
        android:id="@+id/tvTel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvCumple"
        android:layout_marginTop="@dimen/espacioy"
        android:text="@string/tel"
        android:textStyle="bold"
        android:textSize="@dimen/titulo"/>
    <TextView
        android:id="@+id/tvTelU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/tvTel"
        app:layout_constraintLeft_toRightOf="@+id/tvTel"
        android:hint="Tel"
        android:textStyle="italic"
        android:textSize="@dimen/titulo"
        android:layout_marginLeft="@dimen/espaciox"/>
    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvTel"
        android:layout_marginTop="@dimen/espacioy"
        android:text="@string/emailContacto"
        android:textStyle="bold"
        android:textSize="@dimen/titulo"/>
    <TextView
        android:id="@+id/tvEmailU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/tvEmail"
        app:layout_constraintLeft_toRightOf="@+id/tvEmail"
        android:hint="@string/emailContacto"
        android:textStyle="italic"
        android:textSize="@dimen/titulo"
        android:layout_marginLeft="@dimen/espaciox"

        />

    <TextView
        android:id="@+id/tvDescripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvEmail"
        android:layout_marginTop="@dimen/espacioy"
        android:text="@string/descripcion"
        android:textStyle="bold"
        android:textSize="@dimen/titulo"/>
    <TextView
        android:id="@+id/tvDescripcionU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/tvDescripcion"
        app:layout_constraintLeft_toRightOf="@+id/tvDescripcion"
        android:hint="@string/descripcion"
        android:textStyle="italic"
        android:textSize="@dimen/titulo"
        android:layout_marginLeft="@dimen/espaciox"

        />

    <Button
        android:id="@+id/bEditar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvDescripcionU"
        android:layout_marginTop="12dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/editar"/>


</android.support.constraint.ConstraintLayout>
